# advent_of_code_rust

./: .gitignore  README.md
2019/: Cargo.toml
2019/src/: intcode.rs  lib.rs  main.rs
2019/src/days/: day_1.rs
2020/: Cargo.toml
2020/src/inputs/: day09.inp
2021/: Cargo.toml
2021/src/utils/: bit_ops.rs  mod.rs
2023/: Cargo.toml
2024/: Cargo.toml
2024/benches/: all_days.rs  day1.rs  day2.rs
2024/src/: day02.rs  day03.rs  day1.rs  day2.rs
2024/tests/: test_day1.rs  test_day2.rs  test_day3.rs
