[package]
name = "aoc"
version = "0.1.0"
authors = ["Sam <tritoke@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "~1.6.1"
fnv = "1.0.7"
rustc-hash = "1.1.0"
ahash = "0.7.0"
grid = "0.2.3"
anyhow = "1.0.40"
